[tool.poetry]
name = "ciphertext-solver"
version = "0.1.0"
description = ""
authors = ["Ambuj Pawar <ambuj.pawar95@gmail.com>"]
readme = "README.md"
packages = [{include = "ciphertext_solver", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.9"
python-dotenv = "^1.0.0"
autocorrect = "^2.6.1"
uvicorn = "^0.22.0"
pyenchant = "^3.2.2"

[tool.poetry.group.dev.dependencies]
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
loguru = "^0.7.0"
isort = "^5.12.0"
black = "^23.3.0"
ruff = "^0.0.220"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
